--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                     <details>
                         
                         <summary>Ambipom</summary>
-                        <div id="box">
+                        <div class="box">
                         <h3>Normal</h3>
                         <p>Fake Out, Double Hit, Power-up Punch, Low-Kick </p>
                         <figure>
@@ -37,7 +37,7 @@
                 <li>
                     <details>
                         <summary>Cloyster</summary>
-                        <div id="box">
+                        <div class="box">
                             <h3>Water/Ice</h3>
                             <p>Rock Blast, Icicle Spear, Shell Smash, Ice Shard</p>
                             <figure>
@@ -54,7 +54,7 @@
                 <li>
                     <details>
                         <summary>Ditto</summary>
-                        <div id="box">
+                        <div class="box">
                             <h3>Normal</h3>
                             <p>Transform</p>
                             <figure>
@@ -69,7 +69,7 @@
                 <li>
                     <details>
                         <summary>Kangaskhan</summary>
-                        <div id="box">
+                        <div class="box">
                             <h3>Normal</h3> 
                             <p>Power-up Punch, Earthquake, Fake-out, Return</p>
                             <figure>
@@ -83,7 +83,7 @@
                 <li>
                     <details>
                         <summary>Umbreon</summary>
-                        <div id="box">
+                        <div class="box">
                             <h3>Dark</h3>
                             <p>Toxic, Curse, Moonlight, Shadowball</p>
                             <figure>
@@ -97,7 +97,7 @@
                 <li>
                     <details>
                         <summary>Dragonite</summary>
-                        <div id="box">
+                        <div class="box">
                             <h3>Dragon</h3>
                             <p>Dragon Dance, Dragon Rush, Waterfall, Roost </p>
                             <figure>
