--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
 
         </div>
         
-    </aritcle>
+    </article>
     
     <footer>
         <p>Source: <a href="http://www.pokemon.com">Pokemon</a></p>
